# P2Pfiletransfer

./: Cargo.toml  apiTest.http  build.rs  test.db
frontend/: Cargo.toml  README.md  certificate.crt  package-lock.json  package.json  private.key  vite.config.js
frontend/pkg/: README.md  frontend.d.ts  frontend.js  frontend_bg.js  frontend_bg.wasm  frontend_bg.wasm.d.ts  hello_world.d.ts  hello_world_bg.js  hello_world_bg.wasm  hello_world_bg.wasm.d.ts  index.d.ts  index_bg.js  index_bg.wasm  index_bg.wasm.d.ts  package.json
frontend/public/: stream.html  sw.js
frontend/src/: App.vue  fs.ts  lib.rs  main.js  messages.ts  types.ts
frontend/src/components/: ConnectingToUploader.vue  DownloadComplete.vue  DownloadInProgress.vue  Downloader.vue  PasswordEntry.vue  ReadyToDownload.vue  ReturnHome.vue  UploadFileList.vue  Uploader.vue  UploadingState.vue  useWebRTC.ts  webrtcpeerProvider.vue
frontend/src/hooks/: useClipboard.ts  useDownloader.ts  useUploaderChannel.ts  useUploaderConnections.ts  worker.ts
frontend/src/router/: index.ts
frontend/src/utils/: StreamSaver.js  compress.js  download.ts  download2.ts  downloadManager.ts
frontend/src/views/: Download.vue  Upload.vue
src/: config.rs  custom_extractor.rs  errors.rs  logger.rs  main.rs  result.rs  setting.rs
src/controller/: channel.rs
src/entities/: mod.rs  test.rs  user.rs
src/middleware/: customer.rs
src/repository/: channel.rs
src/routers/: channel.rs  mod.rs  static_router.rs
src/utils/: mod.rs  rand_utils.rs
