[package]
name = "filepizzabackend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = "0.7.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.213", features = ["derive"] }

tower-http = { version = "0.6.1", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
    "catch-panic",
    "timeout",
    "fs",
] }

moka = { version = "0.12.10", features = ["future"] }

http = "1.0"
tower-layer = "0.3.3"
tower-service = "0.3"

serde_json = "1.0.132"
once_cell = "1.20.2"
rand = "0.9.1"
md5 = "0.7.0"

rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }

anyhow = "1.0.98"
uuid = { version = "1.16.0", features = ["v4"] }
serde_yaml = "0.9.34+deprecated"
mime_guess = "2.0.5"
[build-dependencies]